--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           github_user_name: williamsoares1
           svg_out_path: dist/github-contribution-grid-snake2.svg
-          snake_color: 'sky-blue'
+          snake_color: 'light green'
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
